--- a/src/views/www.qidian.com/section_1.html
+++ b/src/views/www.qidian.com/section_1.html
@@ -3,7 +3,7 @@
     <!-- start 本周强推-->
     <div class="book-list-wrap mr30 fl" data-aid="qd_A101">
         <h3 class="wrap-title">本周强推
-            <a class="more" href="http://wwwploy.qidian.com/Book/CommendListNew.aspx?GroupId=3" target="_blank"><em>&#124;</em>更多</a>
+            <a class="more" href="http://wwwploy.qidian.com/Book/CommendListNew.aspx?GroupId=3" target="_blank">更多<em class="iconfont">&#xe621;</em></a>
         </h3>
         <div class="book-list">
             <ul>
@@ -95,7 +95,8 @@
     <!-- end 编辑推荐 -->
     <!-- start 三江·网文新风 -->
     <div class="book-list-wrap fr" data-aid="qd_A104">
-        <h3 class="wrap-title">三江<i>&#183;</i>网文新风<a class="more" href="http://sjg.qidian.com/Default.aspx" target="_blank"><em>&#124;</em>更多</a></h3>
+        <h3 class="wrap-title">三江<i>&#183;</i>网文新风
+            <a class="more" href="http://sjg.qidian.com/Default.aspx" target="_blank">更多<em class="iconfont">&#xe621;</em></a></h3>
         <div class="book-list">
             <ul>
                 <!-- 这里对频道页是‘二次元’字符做了class的特殊处理 -->
