--- a/src/views/www.qidian.com/section_2.html
+++ b/src/views/www.qidian.com/section_2.html
@@ -3,7 +3,8 @@
     <div id="rank-list-row" class="rank-list-row cf mb20">
         <!-- start 原创风云榜 -->
         <div class="rank-list" data-aid="qd_A107">
-            <h3 class="wrap-title">原创风云榜<i>&#183;</i>新书<a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/yuepiao?chn=0" target="_blank" data-aid="qd_A108"><em>&#124;</em>更多</a>
+            <h3 class="wrap-title">原创风云榜<i>&#183;</i>新书
+                <a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/yuepiao?chn=0" target="_blank" data-aid="qd_A108">更多<em class="iconfont">&#xe621;</em></a>
             </h3>
             <div class="book-list">
                 <ul>
@@ -95,8 +96,8 @@
         <!-- end 24小时热销榜 -->
         <!-- start 周点击榜-->
         <div class="rank-list" data-aid="qd_A111">
-            <h3 class="wrap-title">
-                周点击榜<a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/click" target="_blank" data-aid="qd_A112"><em>&#124;</em>更多</a></h3>
+            <h3 class="wrap-title">周点击榜
+                <a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/click" target="_blank" data-aid="qd_A112">更多<em class="iconfont">&#xe621;</em></a></h3>
             <div class="book-list">
                 <ul>
                     <li class="unfold">
@@ -137,8 +138,8 @@
         <!-- end 周点击榜 -->
         <!-- start 周推荐票榜-->
         <div class="rank-list" data-aid="qd_A113">
-            <h3 class="wrap-title">
-                周推荐票榜<a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/recom" target="_blank" data-aid="qd_A114"><em>&#124;</em>更多</a></h3>
+            <h3 class="wrap-title">周推荐票榜
+                <a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/recom" target="_blank" data-aid="qd_A114">更多<em class="iconfont">&#xe621;</em></a></h3>
             <div class="book-list">
                 <ul>
                     <li class="unfold">
@@ -178,8 +179,8 @@
         <!-- end 周推荐票榜单 -->
         <!-- start 签约作家新书榜 -->
         <div class="rank-list mr0" data-aid="qd_A115">
-            <h3 class="wrap-title">
-                签约作家新书榜<a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/signnewbook" target="_blank" data-aid="qd_A116"><em>&#124;</em>更多</a></h3>
+            <h3 class="wrap-title">签约作家新书榜
+                <a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/signnewbook" target="_blank" data-aid="qd_A116">更多<em class="iconfont">&#xe621;</em></a></h3>
             <div class="book-list">
                 <ul>
                     <li class="unfold">
