--- a/src/views/www.qidian.com/section_5.html
+++ b/src/views/www.qidian.com/section_5.html
@@ -108,8 +108,8 @@
     <div class="right-wrap fr" data-aid="qd_A132">
         <!-- start 新人·签约新书榜 -->
         <div class="rank-list">
-            <h3 class="wrap-title">新人<i>
-                &#183;</i>签约新书榜<a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/signnewbook" target="_blank" data-aid="qd_A133"><em>|</em>更多</a>
+            <h3 class="wrap-title">新人<i>&#183;</i>签约新书榜
+                <a class="more" href="//<%= staticConf.domainPrefix %>r.qidian.com/signnewbook" target="_blank" data-aid="qd_A133">更多<em class="iconfont">&#xe621;</em></a>
             </h3>
             <div class="book-list">
                 <ul>
