--- a/src/views/www.qidian.com/section_6.html
+++ b/src/views/www.qidian.com/section_6.html
@@ -38,7 +38,7 @@
     <!-- start 更新列表 -->
     <div class="update-list-wrap fl" data-aid="qd_A135">
         <div class="update-tab cf">
-            <a class="blue" href="//<%= staticConf.domainPrefix %>a.qidian.com" target="_blank" data-aid="qd_A140">更多</a><span class="blue">&#124;</span>
+            <a class="blue" href="//<%= staticConf.domainPrefix %>a.qidian.com" target="_blank" data-aid="qd_A140">更多<em class="iconfont">&#xe621;</em></a><span class="blue">&#124;</span>
             <p id="update-tab">
                 <a class="act" href="javascript:" data-aid="qd_A137">全部</a><span>&#183;</span><a href="javascript:" data-aid="qd_A138">免费</a><span>&#183;</span><a href="javascript:" data-aid="qd_A139">VIP</a>
             </p>
